--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "author": "adasq",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "0.22.0",
     "nested-property": "0.0.7",
-    "request": "2.88.0",
-    "cheerio": "0.22.0"
+    "puppeteer": "1.11.0",
+    "request": "2.88.0"
   },
   "devDependencies": {
     "expect.js": "0.3.1",
